[gd_scene load_steps=3 format=2]

[ext_resource path="res://DefaultNode.gd" type="Script" id=1]
[ext_resource path="res://Assets/GreenTheme.tres" type="Theme" id=2]

[node name="DefaultNode" type="GraphNode" groups=["graph_nodes"]]
margin_right = 532.0
margin_bottom = 256.0
theme = ExtResource( 2 )
title = "New"
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 30.0
margin_right = 532.0
margin_bottom = 78.0
custom_constants/separation = 40

[node name="MainColumn" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 532.0
margin_bottom = 48.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="Title" type="HBoxContainer" parent="HBoxContainer/MainColumn"]
margin_right = 532.0
margin_bottom = 48.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="HBoxContainer/MainColumn/Title"]
margin_top = 8.0
margin_right = 120.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 32 )
text = "Title"
valign = 1

[node name="Title" type="LineEdit" parent="HBoxContainer/MainColumn/Title"]
margin_left = 130.0
margin_right = 380.0
margin_bottom = 48.0
rect_min_size = Vector2( 250, 32 )

[node name="Comment" type="HBoxContainer" parent="HBoxContainer/MainColumn"]
visible = false
margin_top = 287.0
margin_right = 640.0
margin_bottom = 387.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="HBoxContainer/MainColumn/Comment"]
margin_top = 38.0
margin_right = 90.0
margin_bottom = 62.0
rect_min_size = Vector2( 90, 0 )
text = "Comment"

[node name="Comment" type="TextEdit" parent="HBoxContainer/MainColumn/Comment"]
margin_left = 100.0
margin_right = 500.0
margin_bottom = 100.0
rect_min_size = Vector2( 400, 100 )
wrap_enabled = true
caret_blink = true

[connection signal="close_request" from="." to="." method="_on_GraphNode_close_request"]
[connection signal="resize_request" from="." to="." method="_on_GraphNode_resize_request"]
[connection signal="text_changed" from="HBoxContainer/MainColumn/Title/Title" to="." method="_on_Title_text_changed"]
